# quat

./: .gitignore  LICENSE  README.md  index.html  manifest.webapp  quat-mobile.sublime-workspace
app/: COMPILATION.MD  index.html  main.js  project.json
app/frameworks/runtime-src/Classes/: AppDelegate.cpp
app/src/: BackgroundLayer.js  Game.js  GameInfo.js  GameScene.js  GameStateController.js  GameTouchInputManager.js  StateController.js  TouchInputManager.js  app.js  fixes.js  model.js  puzzles.js  themes.js
app/src/about/: AboutLayer.js
app/src/look/: LookLayer.js
app/src/menu/: MenuButton.js  MenuLayer.js
app/src/nodes/: IconButton.js  RectRadius.js
app/src/solver/: BackgroundLayer.js  BorderedWordNode.js  ChooseLetterLayer.js  FinishedLayer.js  KeyboardInputManager.js  KeyboardLayer.js  PuzzleLayer.js  PuzzleScene.js  SliderLayer.js  SolutionLayer.js  SolverStateController.js  SolverTouchInputManager.js  StateController.js  TextIndicatorLayer.js  ThemeChangeLayer.js  TouchInputManager.js  WordNode.js  out.js
app/src/stats/: StatLayer.js  StatsLayer.js
cpp/: .cocos-project.json  CMakeLists.txt
cpp/Classes/: AppDelegate.cpp  AppDelegate.h  BackgroundLayer.cpp  BackgroundLayer.h  Clickable.cpp  Clickable.h  CloseButton.cpp  CloseButton.h  Constants.h  GameScene.cpp  GameScene.h  GameStateController.cpp  GameStateController.h  MenuButtonLayer.cpp  MenuButtonLayer.h  States.h  TouchInputManager.cpp  TouchInputManager.h  Utils.cpp  Utils.h
cpp/Classes/ads/: AdLayer.cpp  AdLayer.h
cpp/Classes/defs/: Definition.cpp  Definition.h  DefinitionLayer.cpp  DefinitionLayer.h
cpp/Classes/menu/: BannerButton.cpp  BannerButton.h  BuyLayer.cpp  BuyLayer.h  CreditsLayer.cpp  CreditsLayer.h  DrawnBanner.cpp  DrawnBanner.h  EndlessLayer.cpp  EndlessLayer.h  FAMenuButton.cpp  FAMenuButton.h  IconMenuButton.cpp  IconMenuButton.h  MenuButton.cpp  MenuButton.h  MenuLayer.cpp  MenuLayer.h  NavButtonLayer.cpp  NavButtonLayer.h  RankCard.cpp  RankCard.h  TimedCard.cpp  TimedCard.h  TimedLayer.cpp  TimedLayer.h
cpp/Classes/models/: Blitzer.cpp  Blitzer.h  Dictionary.cpp  Dictionary.h  Game.cpp  Game.h  GameState.cpp  GameState.h  Puzzle.cpp  Puzzle.h  PuzzleManager.cpp  PuzzleManager.h  QuatStream.cpp  QuatStream.h  Theme.cpp  Theme.h  ThemeManager.h  TimeUtils.cpp  TimeUtils.h  TimedState.cpp  TimedState.h  User.cpp  User.h
cpp/Classes/models/keys/: README.md  key  key.cpp  key.h
cpp/Classes/models/themes/: RankTheme.cpp  RankTheme.h
cpp/Classes/nodes/: CircleNode.cpp  CircleNode.h  FixedDrawNode.h  IconNode.cpp  IconNode.h  ProgressBar.cpp  ProgressBar.h  RectRadius.cpp  RectRadius.h  StarNode.cpp  StarNode.h
cpp/Classes/solver/: BannerButtonLayer.cpp  BannerButtonLayer.h  BorderedWordNode.cpp  BorderedWordNode.h  DefinitionButtonLayer.cpp  DefinitionButtonLayer.h  KeyboardLayer.cpp  KeyboardLayer.h  MenuButtonLayer.cpp  MenuButtonLayer.h  PuzzleLayer.cpp  PuzzleLayer.h  SolutionLayer.cpp  SolutionLayer.h  SolverKeyboardManager.cpp  SolverKeyboardManager.h  SolverStateController.cpp  SolverStateController.h  SolverTouchInputManager.cpp  SolverTouchInputManager.h  StepsIndicatorLayer.cpp  StepsIndicatorLayer.h  TextIndicatorLayer.cpp  UndoButtonLayer.cpp  UndoButtonLayer.h  WordNode.cpp  WordNode.h
cpp/Classes/solver/info/: BlitzIndicatorLayer.cpp  BlitzIndicatorLayer.h  DefinitionButtonLayer.cpp  DefinitionButtonLayer.h  IndicatorLayer.cpp  IndicatorLayer.h  ProgressIndicatorLayer.cpp  ProgressIndicatorLayer.h  ProgressLayer.h  StepsIndicatorLayer.cpp  StepsIndicatorLayer.h  StepsLayer.cpp  StepsLayer.h  TextIndicatorLayer.cpp  TextIndicatorLayer.h  TimedIndicatorLayer.cpp  TimedIndicatorLayer.h
cpp/Classes/solver/info/banner/: BannerButtonLayer.cpp  BannerButtonLayer.h  ExplodingCircle.cpp  ExplodingCircle.h
cpp/Classes/solver/input/: .ButtonsLayer.cpp.swo  BorderedWordNode.cpp  BorderedWordNode.h  ButtonsLayer.cpp  ButtonsLayer.h  FutureSightButtonLayer.cpp  FutureSightButtonLayer.h  KeyboardLayer.cpp  KeyboardLayer.h  SkipButtonLayer.cpp  SkipButtonLayer.h  SolverKeyboardManager.cpp  SolverKeyboardManager.h  SolverTouchInputManager.cpp  SolverTouchInputManager.h  UndoButtonLayer.cpp  UndoButtonLayer.h  WordNode.cpp  WordNode.h
cpp/Classes/timed/: HighScoreLayer.cpp  HighScoreLayer.h  TimedTransitionLayer.cpp  TimedTransitionLayer.h
cpp/Resources/: puzzles.quat
cpp/cocos2d/: CMakeLists.txt
cpp/cocos2d/cocos/renderer/: ccShader_PositionColorLengthTexture.frag  ccShader_PositionColorLengthTexture.vert
cpp/proj.android/: .cproject  .project  AndroidManifest.xml  build.xml
cpp/proj.android-studio/: settings.gradle
cpp/proj.android-studio/app/: AndroidManifest.xml  build.gradle
cpp/proj.android-studio/app/res/values/: strings.xml
cpp/proj.android/res/values/: strings.xml
cpp/proj.ios_mac/QUAT.xcodeproj/: project.pbxproj
cpp/proj.ios_mac/QUAT.xcodeproj/project.xcworkspace/xcuserdata/calebfoust.xcuserdatad/: UserInterfaceState.xcuserstate
cpp/proj.ios_mac/QUAT.xcodeproj/xcuserdata/calebfoust.xcuserdatad/xcschemes/: QUAT-desktop.xcscheme  QUAT-mobile.xcscheme  xcschememanagement.plist
cpp/proj.ios_mac/cppquat.xcodeproj/: project.pbxproj
cpp/proj.ios_mac/ios/: Info.plist
cpp/proj.ios_mac/mac/: Info.plist
cpp/proj.win10/: cppquat.sln
cpp/proj.win10/App/: Package.appxmanifest  cppquat.vcxproj  cppquat.vcxproj.filters
cpp/proj.win32/: cppquat.sln
cpp/proj.win8.1-universal/: cppquat.sln
cpp/proj.win8.1-universal/App.Shared/: cppquat.Shared.vcxitems
cpp/proj.win8.1-universal/App.Windows/: Package.appxmanifest  cppquat.Windows.vcxproj  cppquat.Windows.vcxproj.filters
cpp/proj.win8.1-universal/App.WindowsPhone/: Package.appxmanifest  cppquat.WindowsPhone.vcxproj
data/: dump.sh  puzzlegen.py  twopoint.py  words  words.map  words2.js
data/math/src/: GaussianFunction.java  MathApp.java  Puzzle.java  PuzzleIterator.java  WordMap.java  WordWrap.java
js/app/: index.html  main.js  manifest.webapp  project.json  quat.manifest
js/app/src/: Game.js  GameScene.js  StateController.js  themes.js
js/data/: dict.js  words.js
src/: app.js
(+58 files in other folders)
